feat(config): 添加 Sentry 配置支持

--- a/.env.development
+++ b/.env.development
@@ -17,3 +17,12 @@ VITE_ENABLE_DEBUG=true
 
 # 日志级别：debug | info | warn | error
 VITE_LOG_LEVEL=debug
+
+# Sentry 配置（开发环境可选）
+VITE_SENTRY_DSN=
+VITE_SENTRY_ENABLED=false
+
+# 加密存储配置
+# 开发环境可以禁用加密，方便调试
+VITE_ENABLE_STORAGE_ENCRYPTION=false
+VITE_ENCRYPTION_KEY=
