--- a/.env.local.example
+++ b/.env.local.example
@@ -20,6 +20,19 @@ VITE_ENABLE_DEBUG=true
 # 日志级别
 VITE_LOG_LEVEL=debug
 
+# Sentry 配置
+# 从 Sentry 项目设置中获取 DSN
+# 格式: https://<key>@<organization>.ingest.sentry.io/<project>
+VITE_SENTRY_DSN=
+VITE_SENTRY_ENABLED=false
+
+# 加密存储配置
+# 是否启用 localStorage 加密（生产环境推荐启用）
+VITE_ENABLE_STORAGE_ENCRYPTION=false
+# 加密密钥（生产环境必须设置强密钥，建议至少 32 位）
+# 可以使用 openssl rand -base64 32 生成随机密钥
+VITE_ENCRYPTION_KEY=
+
 # 示例：其他可能的配置
 # VITE_AUTH_TOKEN=your-token-here
 # VITE_API_KEY=your-api-key-here
