--- a/.env.production
+++ b/.env.production
@@ -17,3 +17,15 @@ VITE_ENABLE_DEBUG=false
 
 # 日志级别
 VITE_LOG_LEVEL=error
+
+# Sentry 配置（生产环境建议启用）
+# 请在 Sentry 控制台创建项目并获取 DSN
+VITE_SENTRY_DSN=
+VITE_SENTRY_ENABLED=true
+
+# 加密存储配置
+# 生产环境强烈建议启用加密
+VITE_ENABLE_STORAGE_ENCRYPTION=true
+# 生产环境必须设置强加密密钥（建议至少 32 位）
+# 可以使用 openssl rand -base64 32 生成随机密钥
+VITE_ENCRYPTION_KEY=
