--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@ dist-ssr
 *.local
 
 # 环境配置文件
-.env.local
-.env.*.local
+# 排除所有 .env 文件，但保留示例文件
+.env
+.env.*
+!.env.*.example
 
 # Editor directories and files
 .vscode/*
