--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "openapi-typescript-codegen": "^0.30.0",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "sass": "^1.97.1",
     "tailwindcss": "^4.1.18",
